- Fixed: Blockly, fixed extra quote when setting a user variable string value
- Fixed: Database backup is now only possible for admin users
- Fixed: Double checking command rights
- Fixed: Dummy, when new sensor is created, Add it to the EventSystem
- Fixed: Fix Off Delay not handled for Selector switch (#538).
- Fixed: Fix On/Off delays not saved on the selector switch edit form (#532).
- Fixed: KMTronic, did not work in timers/groups/scenes
- Fixed: Manual Light/Switch, when created, Add it to the EventSystem
- Fixed: Wind Speed/Gust graph, Plotbands
- Fixed: Added grid lines to percentage/lux/general graphs
- Updated: AngularJS 1.5.8
- Updated: Highcharts 4.2.6
- Updated: SQLite3 v3.13.0

Version 3.4834 (March 2nd 2016)
- Implemented: Blockly, now possible to use expressions in notifications/email/SMS like "My temperature is {{temperaturedevice[1234]}} degrees" (see http://www.domoticz.com/wiki/Events)
- Implemented: Blockly, now possible to send a notification with a user variable/device as subject/body
- Implemented: Chinese language support, big thanks to wxws!!
- Implemented: Custom Templates, now possible to directly call custom template pages (http://127.0.0.1:8080/#/Custom/mypage)
- Implemented: Day display in energy/gas/water/temp report
- Implemented: Dummy Hardware, Option to supply name, sensor is now also directly added to the system
- Implemented: Dummy Hardware, Wind+Temp+Chill
- Implemented: Dummy Hardware, option to create an RGBW switch
- Implemented: Extra timer-schedules: Odd/Even Days, Odd/Even Weeks, Monthly & Yearly
- Implemented: Hardware Monitor for FreeBSD (but it needs the libsysinfo package to work)
- Implemented: HTU21D(F)/SI702x Humidity+Temp I2C sensor (jvandenb)
- Implemented: Icelandic language support, big thanks to Magnus!!
- Implemented: Log View, added options to display All/Status/Error
- Implemented: Lua Editor
- Implemented: Macedonian translation (Big thanks to jocogvg!!!)